# SugarToolsPR

./: Cargo.toml  ds_config.json
cli/: Cargo.toml
cli/src/: main.rs
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/db/: db_sink.rs  mod.rs  schema.rs
infra/src/file/: csv.rs  mod.rs
infra/src/gpu/: bind_group_builder.rs  bind_layout_templates.rs  buffer_pool.rs  context.rs  encoder_utils.rs  mod.rs  pipeline.rs  readback.rs  (+2 more)
rng-core/: Cargo.toml
rng-core/src/: LCG.rs  MT.rs  candidate.rs  initial_seed.rs  initialseed.rs  lib.rs  result_base.rs  sha_1.rs
rng-core/src/gpu/: bind_layout.rs  helpers.rs  input_layout.rs  local_gpu_config.rs  mod.rs  mt_kernel.rs  result_layout.rs  sha1_kernel.rs  staging_layout.rs  test_io_kernel.rs
rng-core/src/gpu/wgsl/: mt.wgsl  mt_compact.wgsl  mt_seedhigh_compact.wgsl  sha-1.wgsl  sha-1_mt_compact.wgsl  sha-1_seedhigh_filter.wgsl  test_io.wgsl
rng-core/src/lcg/: TID_impl.rs  grotto.rs  mod.rs  nature.rs  nature_impl.rs  offset_impl.rs  wild_poke.rs
rng-core/src/models/: Field_Range.rs  datetime_iterator.rs  ds_config.rs  game-date.rs  game-version.rs  game_date.rs  game_date_iterator.rs  game_time.rs  game_time_iterator.rs  game_version.rs  initial_seed.rs  key_presses.rs  mod.rs  search_base.rs
rng-core/src/search/: black1_pup.rs
search/: Cargo.toml
search-infra/: Cargo.toml
search/src/: black1_pup.rs  lib.rs  model.rs  white2_snivy.rs  white2_tepig.rs
white2-dragonite-cli/: Cargo.toml
white2-dragonite-cli/src/: main.rs
white2_tepig-cli/: Cargo.toml
white2_tepig-cli/src/: ds_config.json  main.rs
(+4 files in other folders)
