[package]
name = "rng-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1 = "0.10"
chrono = "0.4.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
wgpu = "28.0.0"
infra = { path = "../infra" }

[dev-dependencies]
pollster = "0.3"
